<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PickApp Line</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="manu_title">Categories</string>
    <string name="street_line">At the Street Pickup lines</string>
    <string name="club_line">At the Club pickup lines</string>
    <string name="pub_line">At the Pub Pickup line</string>
    <string name="casual_line">Casual friends Pickup line</string>
    <string name="title_activity_street_lines">StreetLinesActivity</string>
    <string name="title_activity_club_lines">ClubLinesActivity</string>
    <string name="title_activity_pub_lines">PubLinesActivity</string>
    <string name="title_activity_casual_lines">CasualLinesActivity</string>
    <string name="title_activity_favorites_list">FavoritesList</string>
    <string name="favorites_list">Favorites List</string>
    <string name="favorites_delete">Delete</string>
    <string name="favorites_add">Add to Favorites</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_show_favorite_line">Show Favorite Line</string>
    <string name="facebook_app_id">1485933001687315</string>
    <string name="title_activity_facebook_log">FacebookLogActivity</string>
    <string name="title_login_activity">LoginActivity</string>
    <string name="title_activity_help_acrivity">HelpAcrivity</string>
    <string name="help">Help</string>
    <string name="show_favorite_line">Your Line</string>
    <string name="welcom_title">Hello and welcom to the pickup lines application.</string>

</resources>
