<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9edbf2"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/ButtonStreetLine"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/ButtonPubLine"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_squre"
        android:text="@string/street_line"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonCasualFriends"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/ButtonPubLine"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="53dp"
        android:background="@drawable/shape_squre"
        android:text="@string/casual_line"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonPubLine"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_above="@+id/ButtonCasualFriends"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:background="@drawable/shape_squre"
        android:text="@string/pub_line"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonClubLine"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_above="@+id/ButtonStreetLine"
        android:layout_alignLeft="@+id/ButtonStreetLine"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_squre"
        android:text="@string/club_line"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/manu_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50dp"
        android:textStyle="bold" />

</RelativeLayout>